--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family: idroid;
-    src: url(/fontes/idroid.otf) format('opentype');
+    src: url(../fontes/idroid.otf) format('opentype');
     font-weight: normal;
 }
 
